# tts-tools

./: .gitignore  BATCH_PROCESSOR_README.md  QUICKSTART.md  README.md  main.py  pyproject.toml  test_text_processing.py  tts.py  tts_batch_processor.py  tts_clone.py  tts_no_voice_clone.py  tts_nz_accent.py
archive_texts/: TextFile01.txt  http-check.txt
input_texts/: example01.txt
