[project]
name = "tts-tools"
version = "0.1.0"
description = "A collection of tools for text-to-speech processing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "librosa==0.11.0",
    "s3tokenizer",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "diffusers==0.29.0",
    "resemble-perth==1.0.1",
    "conformer==0.3.2",
    "safetensors==0.5.3",
    "spacy-pkuseg",
    "pykakasi==2.3.0",
    "chatterbox-tts>=0.1.3",
    "ml-dtypes>=0.3.1",
]

[tool.uv.extra-build-dependencies]
pkuseg = ["numpy"]
